Feat: DarkMode Styling Implementation

--- a/src/html/assignments.html
+++ b/src/html/assignments.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/index.css"> 
     <link rel="stylesheet" href="../css/syllabus.css"> 
     <link rel="stylesheet" href="../css/assignments.css">
+    <link rel="stylesheet" href="../css/theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" type="image/svg+xml" href="https://www.utsc.utoronto.ca/favicon.ico">
 </head>
@@ -131,5 +132,13 @@
         
         
     </footer>
+    <!--Dark Mode toggle-->
+    <div class="theme-toggle">
+        <input type="checkbox" id="dark-mode-toggle">
+        <label for="dark-mode-toggle" class="toggle-label">
+            <i class="fa-regular fa-moon"></i>
+            <i class="fa-regular fa-sun"></i>
+        </label>
+    </div>  
 </body>
 </html>
