--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSCB20 - Introduction to Databases and Web Applications Winter 2025</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" type="image/svg+xml" href="https://www.utsc.utoronto.ca/favicon.ico">
 </head>
-<body>
+<body class="light-mode">
     <!-- Sticky Header-->
     <header class="sticky">
         <!-- mobile menu-->
@@ -236,5 +237,14 @@
         
         
     </footer>
+
+    <!--Dark Mode toggle-->
+    <div class="theme-toggle">
+        <input type="checkbox" id="dark-mode-toggle">
+        <label for="dark-mode-toggle" class="toggle-label">
+            <i class="fa-regular fa-moon"></i>
+            <i class="fa-regular fa-sun"></i>
+        </label>
+    </div>  
 </body>
 </html>
